deployments/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task1-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task1-app
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true" 
      labels:
        app: task1-app
    spec:
      containers:
      - name: task1-app
        image: skayloo/task1:v1.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
