deployments/app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: task1-app
spec:
  type: ClusterIP
  selector:
    app: task1-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
