deployments/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: task1-app
              port:
                number: 8080
